# python3

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  create_draft_release.yml  publish_to_pypi.yml  release.yml
python3/: __about__.py  __main__.py
test/: test_basics.py  test_resolution.py
